tests/errors/lifetime/path_borrower/move_struct_with_unfulfilled_field_ref_obligation_errors.err.expected
error: at 10:13: [INIT-MoveWithUnfulfilledContainedRef] In function 'f', block 'entry': cannot move 'b': contained reference 'b.p' has unfulfilled obligation (is_init=false, ends_init=true)
    |
 10 |             call take_box(move b);
    |             ^^^^^^^^^^^^^^^^^^^^^
